--- a/styles/style.css
+++ b/styles/style.css
@@ -1,23 +1,16 @@
-@font-face{
-    font-family: "Gilroy";
+@font-face {
+    font-family: 'gilroyextrabold';
     src:
-        local('Gilroy Extra Bold'),
-        local('Gilroy ExtraBold'),
-        local('Gilroy-Extra Bold'),
-        local('Gilroy-ExtraBold'),
-        local('Gilroy-Extra-Bold')
-        url(../fonts/gilroyextrabold.woff2) format("woff2");
-    font-weight: 800;
+    url('../fonts/gilroy-extrabold-webfont.woff2') format('woff2');
+    font-weight: normal;
     font-style: normal;
 }
 
-@font-face{
-    font-family: "Gilroy";
+@font-face {
+    font-family: 'gilroylight';
     src:
-        local('Gilroy Light'),
-        local('Gilroy-Light'),
-        url(../fonts/gilroylight.woff2) format("woff2");
-    font-weight: 300;
+    url('../fonts/gilroy-light-webfont.woff2') format('woff2');
+    font-weight: normal;
     font-style: normal;
 }
 
@@ -36,10 +29,10 @@ body {
     margin: 0;
     padding: 0;
 
-    font-family: Gilroy, Arial, sans-serif;
+    font-family: "gilroyextrabold", Arial, sans-serif;
     font-size: 18px;
     line-height: 24px;
-    font-weight: 800;
+    font-weight: normal;
     color: #000000;
     letter-spacing: 0.01em;
 
@@ -65,6 +58,9 @@ input[type="checkbox"].visually-hidden {
     clip: rect(0 0 0 0);
     overflow: hidden;
 }
+.main-header {
+    padding-top: 40px;
+}
 
 .container {
     width: 1200px;
@@ -73,10 +69,8 @@ input[type="checkbox"].visually-hidden {
 }
 
 .main-navigation {
-    padding: 45px 60px;
-
-    font-size: 15px;
-    line-height: 30px;
+    min-height: 300px;
+    padding: 45px 60px 35px;
     color: #000000;
 
     background-color: #f7e296;
@@ -85,19 +79,18 @@ input[type="checkbox"].visually-hidden {
 .user-tools {
     display: flex;
     flex-wrap: wrap;
-    width: 1040px;
     margin-bottom: 40px;
 
-    font-family: "Open Sans", Arial, sans-serif;
     font-size: 15px;
     line-height: 30px;
+    font-family: "Open Sans", Arial, sans-serif;
     font-weight: 300;
 }
 
 .user-tools__box {
     flex-shrink: 0;
     width: 440px;
-    margin-right: 60px;
+    margin-right: 100px;
 }
 
 .user-tools__link {
@@ -108,14 +101,14 @@ input[type="checkbox"].visually-hidden {
 }
 
 .user-navigation {
-    width: 140px;
+    width: 100px;
     margin: 0;
     padding: 0;
     margin-right: auto;
 }
 
 .site-navigation {
-    outline: 1px solid black;
+    outline: 1px solid blue;
     display: flex;
     margin: 0;
     padding: 0;
@@ -124,6 +117,35 @@ input[type="checkbox"].visually-hidden {
     line-height: 24px;
     letter-spacing: 0.2em;
     text-transform: uppercase;
+}
+
+.site-navigation__catalog-list {
+    display: none;
+
+    line-height: 36px;
+}
+
+.site-navigation__wrapper {
+    width: 440px;
+    margin: 0;
+    margin-right: 100px;
+    padding: 0;
+}
+
+.site-navigation__item {
+    width: 140px;
+}
+
+.site-navigation__delivery {
+    margin-right: 20px;
+}
+
+.site-navigation__warranty {
+    margin-right: 60px;
+}
+
+.site-navigation__contacts {
+    text-align: right;
 }
 
 .user-navigation,
@@ -167,14 +189,14 @@ input[type="checkbox"].visually-hidden {
 .user-tools__form input[type="seach"] {
     border: none;
 
-    font-family: Gilroy, Arial, sans-serif;
+    font-family: "Open Sans", Arial, sans-serif;
     font-size: 15px;
     line-height: 30px;
     font-weight: 300;
     color: #000000;
     letter-spacing: 0.01em;
 
-    background-color: #f7e296;
+    background-color: transparent;
 
     opacity: 0.3;
 }
@@ -199,9 +221,11 @@ input[type="checkbox"].visually-hidden {
     border: 2px solid #000000;
     box-sizing: border-box;
 
-    font: inherit;
-    font-weight: 300;
+    font-family: "Open Sans", Arial, sans-serif;
+    font-size: 15px;
     line-height: 15px;
+    font-weight: 300;
+    letter-spacing: 0.01em;
 
     background-color: transparent;
 }
