--- a/styles/style.css
+++ b/styles/style.css
@@ -43,8 +43,14 @@ a {
     text-decoration: none;
 }
 
+img {
+    max-width: 100%;
+    height: auto;
+}
+
 .visually-hidden:not(:focus):not(:active),
-input[type="checkbox"].visually-hidden {
+input[type="checkbox"].visually-hidden,
+input[type="radio"].visually-hidden {
     position: absolute;
 
     width: 1px;
@@ -151,6 +157,8 @@ input[type="checkbox"].visually-hidden {
 }
 
 .name-link {
+    position: relative;
+
     width: 160px;
     margin-right: 20px;
     padding-left: 25px;
@@ -158,22 +166,132 @@ input[type="checkbox"].visually-hidden {
     text-align: right;
 }
 
-.user-tools-compare {
-    width: 100px;
-    padding-left: 20px;
+.name-link::before {
+    content: "";
+    
+    position: absolute;
+    left: 0;
+    top: 50%;
 
-    text-align: right;
+    width: 13px;
+    height: 12px;
+    margin-top: -5px;
+
+    background-image: url("../images/user.png");
+    background-repeat: no-repeat;
+    background-position: 0 0;
+}
+
+.name-link:hover::before,
+.name-link:focus::before {
+    opacity: 0.6;
+}
+
+.name-link:active::before {
+    opacity: 0.3;
+}
+
+.login-link {
+    position: relative;
+
+    padding-left: 25px;
+
+/* outline: 2px solid rgb(5, 107, 240); */
+}
+
+.login-link::before {
+    content: "";
+    
+    position: absolute;
+    left: 0;
+    top: 50%;
+
+    width: 13px;
+    height: 12px;
+    margin-top: -6px;
+
+    background-image: url("../images/user.png");
+    background-repeat: no-repeat;
+    background-position: 0 0;
+}
+
+.login-link:hover::before,
+.login-link:focus::before {
+    opacity: 0.6;
+}
+
+.login-link:active::before {
+    opacity: 0.3;
+}
+
+.user-tools-compare {
+    position: relative;
+
+    width: 100px;
+    padding-left: 23px;
 
 /* outline: 2px solid darkgoldenrod; */
 }
 
+.user-tools-compare::before {
+    content: "";
+    
+    position: absolute;
+    left: 2px;
+    top: 50%;
+
+    width: 10px;
+    height: 10px;
+    margin-top: -5px;
+
+    background-image: url("../images/compare.svg");
+    background-repeat: no-repeat;
+    background-position: 0 0;
+}
+
+.user-tools-compare:hover::before,
+.user-tools-compare:focus::before {
+    opacity: 0.6;
+}
+
+.user-tools-compare:active::before {
+    opacity: 0.3;
+}
+
 .user-tools-cart {
+    position: relative;
+
     width: 100px;
     padding-left: 35px;
 
     text-align: right;
 
-/* outline: 2px solid darksalmon; */
+/* outline: 2px solid darksalmon;  */
+}
+
+.user-tools-cart::before {
+    content: "";
+    
+    position: absolute;
+    left: 14px;
+    top: 50%;
+
+    width: 12px;
+    height: 12px;
+    margin-top: -6px;
+
+    background-image: url("../images/cart.svg");
+    background-repeat: no-repeat;
+    background-position: 0 0;
+}
+
+.user-tools-cart:hover::before,
+.user-tools-cart:focus::before {
+    opacity: 0.6;
+}
+
+.user-tools-cart:active::before {
+    opacity: 0.3;
 }
 
 .user-menu-name {
@@ -398,9 +516,69 @@ input[type="checkbox"].visually-hidden {
     font-weight: normal;
 }
 
-.more-details {
+.button {
+    position: relative;
+
     display: inline-block;
+    padding-top: 10px;
+    padding-bottom: 10px;
+
+    font-size: 18px;
+    line-height: 24px;
+    letter-spacing: 0.2em;
+    text-transform: uppercase;
+    color: #000000;
+}
+
+.button::before {
+    content: "";
+
+    position: absolute;
+    left: 0;
+    top: 50%;
+    z-index: 10;
+
+    width: 100%;
+    height: 8px;
+    margin-top: -4px;
+
+    background-color: #f0c52e;
+    transition-duration: 200ms;
+}
+
+.more-details {
     margin-bottom: 50px;
+    padding-left: 44px;
+    padding-right: 43px;
+}
+
+.more-details-us {
+    padding-left: 23px;
+    padding-right: 23px;
+}
+
+.write-us {
+    padding-left: 41px;
+    padding-right: 41px;
+}
+
+.more-details-content,
+.more-details-us-content,
+.write-us-content {
+    position: relative;
+    z-index: 100;
+}
+
+.button:hover::before,
+.button:focus::before {
+    top: 0;
+    margin-top: 0;
+
+    height: 100%;
+}
+
+.button:active {
+    color: rgba(0, 0, 0, 0.3);
 }
 
 .popular-item-characteristics-list .value{
@@ -959,13 +1137,15 @@ outline: 2px solid brown;
 }
 
 .page-wrapper {
-    width: 1040px;
+    width: 1200px;
     margin: 0 auto;
+    padding-left: 80px;
+    padding-right: 20px;
 }
 
 .page-title {
     margin: 0;
-    margin-bottom: 30px;
+    margin-bottom: 33px;
     padding: 0;
 
     font-size: 47px;
@@ -1008,4 +1188,210 @@ outline: 2px solid brown;
 
 .breadcrumbs a:active {
     color: rgba(0, 0, 0, 0.1);
+}
+
+.catalog-columns {
+    display: flex;
+    width: 1200px;
+    margin: 0 auto;
+    padding-left: 80px;
+    padding-right: 20px;
+    
+
+background-color: rgba(179, 11, 230, 0.4);
+}
+
+.filters {
+    flex-shrink: 0;
+    width: 270px;
+
+background-color: #efefef;
+}
+
+.sort-catalog-wrapper {
+    padding-left: 70px;
+
+    background-color: #ffffff;
+}
+
+.sort {
+    display: flex;
+    align-items: center;
+    min-height: 70px;
+    margin-bottom: 70px;
+
+background-color: rgba(21, 181, 230, 0.8);
+}
+
+.sort-title {
+    margin: 0;
+    margin-right: 53px;
+    padding: 0;
+
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.2em;
+    text-transform: uppercase;
+}
+
+
+.sort-list {
+    display: flex;
+    margin: 0;
+    padding: 0;
+
+    list-style: none;
+    
+background-color: rgba(29, 202, 52, 0.493);
+}
+
+.monopods-catalog-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0;
+    padding: 0;
+
+    list-style: none;
+}
+
+.monopod-item {
+    display: flex;
+    flex-wrap: wrap;
+    width: 360px;
+    min-height: 460px;
+    margin-right: 40px;
+    margin-bottom: 40px;
+
+outline: 2px solid greenyellow;
+}
+
+.monopod-item:nth-of-type(2n) {
+    margin-right: 0;
+}
+
+
+.monopod-item-image {
+    position: relative;
+}
+
+.hover-box {
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    margin: 0;
+    padding: 0;
+}
+
+.image-box {
+    width: 360px;
+    height: 380px;
+}
+
+
+.monopod-item-box {
+    display: flex;
+    width: 100%;
+    height: 48px;
+    align-items: baseline;
+    margin: 0;
+    margin-top: auto;
+    padding: 0;
+
+background-color: slateblue;
+}
+
+.monopod-item-title-link {
+    width: 260px;
+    
+background-color: rgb(229, 233, 12);
+}
+
+.monopod-item-title {
+    margin: 0;
+    padding: 0;
+
+    font-size: 18px;
+    line-height: 24px;
+
+background-color: rgb(233, 82, 12);
+}
+
+.monopod-item-price {
+    margin-left: auto;
+
+background-color: rgb(215, 12, 233);
+}
+
+.pagination-list {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    min-height: 70px;
+    margin: 0;
+    padding: 0;
+
+    font-size: 16px;
+    line-height: 24px;
+    text-transform: uppercase;
+    letter-spacing: 0.2em;
+
+    list-style: none;
+    background-color: #ebebeb;
+
+
+outline:2px solid #ffc600;
+}
+
+.pagination-item-prev a,
+.pagination-item-next a {
+    display: inline-block;
+    padding-left: 30px;
+    padding-right: 30px;
+
+    line-height: 70px;
+    vertical-align: middle;
+    color: #000000;
+}
+
+.pagination-item-prev a:hover,
+.pagination-item-prev a:focus,
+.pagination-item-next a:hover,
+.pagination-item-next a:focus {
+    background-color: #d9d9d9;
+}
+
+.pagination-item-prev a:active,
+.pagination-item-next a:active {
+    color: rgba(0, 0, 0, 0.3);
+}
+
+.pagination-item a{
+    color: rgba(0, 0, 0, 0.3);
+}
+
+.pagination-item a:hover:not(.link-current),
+.pagination-item a:focus:not(.link-current) {
+    color: rgba(0, 0, 0, 0.6);
+}
+
+.pagination-item a:active:not(.link-current) {
+    color: #000000;
+}
+
+.pagination-item-current a{
+    color: #000000;
+}
+
+.pagination-item:nth-of-type(2) {
+    margin-left:auto;
+}
+
+.pagination-item:nth-of-type(3) {
+    margin-left:32px;
+    margin-right:32px;
+}
+
+.pagination-item:nth-of-type(4) {
+    margin-right:auto;
 }
